# proofdesk

./: .gitignore  PROGRESS.md  README.md  index.html  package-lock.json  package.json  prod.md  proofreading-prompts.md  task.md  tsconfig.app.json  vite.config.ts
docs/: database-tech.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  local_debug.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql  002_proofreading_runtime.sql
src-tauri/src/repository/: app_settings_repository.rs  mod.rs  project_repository.rs  proofreading_repository.rs
src-tauri/src/services/: import_service.rs  mod.rs  proofread_service.rs
src-tauri/src/types/: mod.rs
src/api/: projects.ts  proofreading.ts  settings.ts
src/components/common/: InfoCard.vue
src/components/editor/: TiptapDemo.vue  TiptapProofreadView.vue
src/components/editor/extensions/: IssueMark.ts
src/components/layout/: AppShell.vue
src/components/preview/: DocxSourcePreview.vue  PdfSourcePreview.vue
src/pages/: ProjectDetailPage.vue  ProjectListPage.vue  SettingsPage.vue
src/router/: index.ts
src/styles/: main.css
src/types/: models.ts
src/utils/: buildEditorDoc.ts  pdfImport.ts  runtime.ts
