[package]
name = "proofdesk"
version = "0.1.0"
description = "ProofDesk desktop application"
authors = ["ltc"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "proofdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
zip = "2.4.2"
quick-xml = { version = "0.37.3", features = ["serialize"] }

